--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ author: Colin Nelson <colinnlsn@gmail.com>
 description: Epub Parser for Dart. Suitable for use on the Web or in Flutter
 homepage: https://github.com/orthros/dart-epub
 environment:
-  sdk:
+  sdk: ">=2.7.0 <3.0.0"
 dependencies:
   async:
   archive:
